--- a/SaadiCode/Utilities/CommonsubViews/UsersCell.xib
+++ b/SaadiCode/Utilities/CommonsubViews/UsersCell.xib
@@ -1,21 +1,127 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="UsersCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="147" id="KGk-i7-Jjw" customClass="UsersCell" customModule="SaadiCode" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="451" height="147"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="451" height="147"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R9s-3L-XlG" customClass="CustomView" customModule="SaadiCode" customModuleProvider="target">
+                        <rect key="frame" x="16" y="8" width="419" height="135"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qdu-lg-3Rw">
+                                <rect key="frame" x="8" y="10" width="403" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="mobile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="45e-5a-y2Z">
+                                <rect key="frame" x="8" y="46" width="311" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="website" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YIK-5L-qs2">
+                                <rect key="frame" x="8" y="75" width="311" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="254" text="company name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dar-9l-EGW">
+                                <rect key="frame" x="8" y="104" width="403" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DDz-qp-1Fx">
+                                <rect key="frame" x="377" y="52.5" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="7eW-h4-7fc"/>
+                                    <constraint firstAttribute="width" constant="30" id="8UX-xG-E6o"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="36"/>
+                                <color key="tintColor" red="0.97647058819999999" green="0.55294117649999996" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="✩">
+                                    <color key="titleColor" red="0.97647058819999999" green="0.55294117649999996" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <state key="selected" title="✯">
+                                    <color key="titleColor" red="0.97647058819999999" green="0.55294117649999996" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="45e-5a-y2Z" firstAttribute="top" secondItem="qdu-lg-3Rw" secondAttribute="bottom" constant="8" id="4IG-ci-Wwi"/>
+                            <constraint firstAttribute="trailing" secondItem="dar-9l-EGW" secondAttribute="trailing" constant="8" id="73p-Lj-31l"/>
+                            <constraint firstItem="DDz-qp-1Fx" firstAttribute="centerY" secondItem="R9s-3L-XlG" secondAttribute="centerY" id="8Nk-Si-zLt"/>
+                            <constraint firstItem="dar-9l-EGW" firstAttribute="leading" secondItem="R9s-3L-XlG" secondAttribute="leading" constant="8" id="G8c-qb-Ht2"/>
+                            <constraint firstItem="YIK-5L-qs2" firstAttribute="top" secondItem="45e-5a-y2Z" secondAttribute="bottom" constant="8" id="IXA-Gc-wMq"/>
+                            <constraint firstItem="45e-5a-y2Z" firstAttribute="leading" secondItem="R9s-3L-XlG" secondAttribute="leading" constant="8" id="Jfh-e3-Rea"/>
+                            <constraint firstItem="qdu-lg-3Rw" firstAttribute="leading" secondItem="R9s-3L-XlG" secondAttribute="leading" constant="8" id="Kvr-Xv-ous"/>
+                            <constraint firstAttribute="trailing" secondItem="45e-5a-y2Z" secondAttribute="trailing" constant="100" id="Zuh-4W-tlG"/>
+                            <constraint firstAttribute="trailing" secondItem="YIK-5L-qs2" secondAttribute="trailing" constant="100" id="aZd-5S-TE9"/>
+                            <constraint firstItem="qdu-lg-3Rw" firstAttribute="top" secondItem="R9s-3L-XlG" secondAttribute="top" constant="10" id="c0F-wb-HR0"/>
+                            <constraint firstAttribute="trailing" secondItem="qdu-lg-3Rw" secondAttribute="trailing" constant="8" id="hjz-dh-gGG"/>
+                            <constraint firstAttribute="bottom" secondItem="dar-9l-EGW" secondAttribute="bottom" constant="10" id="rKs-XF-mb6"/>
+                            <constraint firstItem="YIK-5L-qs2" firstAttribute="leading" secondItem="R9s-3L-XlG" secondAttribute="leading" constant="8" id="udp-Wn-zpA"/>
+                            <constraint firstAttribute="trailing" secondItem="DDz-qp-1Fx" secondAttribute="trailing" constant="12" id="z6C-hE-Ovn"/>
+                            <constraint firstItem="dar-9l-EGW" firstAttribute="top" secondItem="YIK-5L-qs2" secondAttribute="bottom" constant="8" id="zcW-md-NU2"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="8"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="0.5"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                <real key="value" value="0.40000000000000002"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                <real key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                <size key="value" width="0.0" height="1"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="R9s-3L-XlG" secondAttribute="bottom" constant="4" id="5Jz-cV-gTW"/>
+                    <constraint firstItem="R9s-3L-XlG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="5vv-nu-cdG"/>
+                    <constraint firstAttribute="trailing" secondItem="R9s-3L-XlG" secondAttribute="trailing" constant="16" id="8Mf-AH-Uh8"/>
+                    <constraint firstItem="R9s-3L-XlG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="JjV-4B-0FC"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="companyLabel" destination="dar-9l-EGW" id="mBi-qf-tcm"/>
+                <outlet property="mobileLabel" destination="45e-5a-y2Z" id="uMF-Vs-7BH"/>
+                <outlet property="starButton" destination="DDz-qp-1Fx" id="99f-ti-F5x"/>
+                <outlet property="userNemaLabel" destination="qdu-lg-3Rw" id="fkp-uz-g6Q"/>
+                <outlet property="websiteLabel" destination="YIK-5L-qs2" id="ZBO-9k-7C3"/>
+            </connections>
+            <point key="canvasLocation" x="174.63768115942031" y="55.245535714285715"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
